# pocketwatcher

./: .env.example  .gitignore  CHANGELOG.md  CODEX_DIAGNOSTICS.md  PLAN.md  VALIDATION_AND_DEBT.md  alembic.ini  main.py  pyproject.toml  requirements.txt  send_test_alert.py  test_setup.py
.github/workflows/: ci.yml
alerting/: __init__.py  discord.py  formatter.py  telegram.py
api/: __init__.py  deps.py  models.py  server.py
api/routes/: __init__.py  backtest.py  metrics.py  settings.py  stats.py  triggers.py
config/: programs.yaml  settings.py  thresholds.yaml
core/: __init__.py  backpressure.py  batch_processor.py  monitoring.py  processor.py  swap_flusher.py  ttl_cache.py
detection/: __init__.py  counters.py  state.py  triggers.py
docs/: 260203-01a-production-readiness.md  260203-02a-background-db-writes.md  ARCHITECTURE.md  HANDOFF_2026-02-04.md  IMPLEMENTATION_PLAN.md  RECAPO_2026-02-05.md  RUNBOOK.md  USER_GUIDE.md  researchhandoff
enrichment/: __init__.py  clustering.py  helius.py  scoring.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
models/: __init__.py  events.py  profiles.py
parser/: __init__.py  alt_cache.py  deltas.py  inference.py
scripts/: backtest.py  bt.py  check_alerts.py  daily_report.py  gmgn_client.py  investigate_alerts.py  refresh_gmgn_auth.py
scripts/windows/: backup.ps1  install-services.ps1  manage-services.ps1
storage/: __init__.py  delta_log.py  event_log.py  postgres_client.py  redis_client.py  swap_queue.py
stream/: __init__.py  batch_consumer.py  consumer.py  dedup.py  geyser_pb2.py  geyser_pb2_grpc.py  yellowstone.py
tests/: __init__.py  test_alerting.py  test_detection.py  test_enrichment.py  test_integration.py  test_parser.py
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  api.js  index.css
web/src/components/: AlertList.jsx  SettingsPanel.jsx  StatsBar.jsx  TriggerCard.jsx  TriggerEditor.jsx
web/src/pages/: Backtest.jsx  Calendar.jsx  Dashboard.jsx  LiveStream.jsx  Settings.jsx  Triggers.jsx
